--- a/client/lab_3/style.css
+++ b/client/lab_3/style.css
@@ -258,10 +258,12 @@ div.carousel {
 .prev:focus,
 .next:focus {
   margin: 0;
+  border-color:crimson
   /* Pick a good border colour and check out how it works with your buttons */
 }
 
 .prev:hover,
 .next:hover {
   /* Pick a good background colour for your hover pseudoclass */
+  background-color:aqua
 }
