--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -35,3 +35,11 @@ form input {
       background-color: rgba(204, 8, 162, 0.65);
     }
 }
+
+.container {
+  margin: 0 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: start;
+  flex:1;
+}
