created html, started messing around with flex in css

--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -31,15 +31,37 @@ form input {
 @media only screen and (max-width: 736px){
     /* Rules in here will only apply when a screen is the correct size */
     /* check it out by using your developer tools to shrink your screen-size */
+
     .container {
       background-color: rgba(204, 8, 162, 0.65);
+      display: flex;
+      flex-direction: column;
+      align-items:flex-start;
     }
+    .header {
+      background-color: rgba(239, 239, 239, 0.40);
+      border: 2px line black;
+      border-radius: 4px;
+      padding: .5em;
+    }
+    .box {
+      background-color: rgba(239, 239, 239, 0.40);
+      border: 2px dashed;
+      border-radius: 4px;
+      padding: 1.5rem;
+      width: 100%;
+  }
 }
 
-.container {
-  margin: 0 20px;
+.wrapper {
+  min-height: 100vh;
   display: flex;
-  justify-content: space-evenly;
-  align-items: start;
-  flex:1;
+  flex-direction: column;
+  justify-content:flex-start;
+  margin: 1em;
+  flex: 1;
 }
+
+
+
+
