--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -1,3 +1,42 @@
+html {
+  background-color: #fff;
+  font-size: 16px;
+  min-width: 300px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  /* these are specific to different browsers */
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: rgb(239, 239, 239);
+}
+
+.wrapper {
+  margin: 1em;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  text-align: left;
+  border: 2px solid;
+}
 /*
 Form Styles
 */
@@ -36,32 +75,50 @@ form input {
       background-color: rgba(204, 8, 162, 0.65);
       display: flex;
       flex-direction: column;
-      align-items:flex-start;
+      align-items:space-around;
+      flex-wrap: wrap;
+      justify-content: space-around;
     }
     .header {
       background-color: rgba(239, 239, 239, 0.40);
-      border: 2px line black;
+      border: 2px solid;
       border-radius: 4px;
       padding: .5em;
     }
     .box {
       background-color: rgba(239, 239, 239, 0.40);
-      border: 2px dashed;
+      border: 2px solid;
       border-radius: 4px;
       padding: 1.5rem;
-      width: 100%;
+      margin: 1em;
   }
 }
 
-.wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content:flex-start;
-  margin: 1em;
-  flex: 1;
-}
+@media only screen and (min-width: 737px){
 
+  .container {
+    background-color: rgba(204, 8, 162, 0.65);
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .header {
+    background-color: rgba(239, 239, 239, 0.40);
+    border: 2px solid;
+    border-radius: 4px;
+    padding: .5em;
+  }
+  .box {
+    background-color: rgba(239, 239, 239, 0.40);
+    border: 2px solid;
+    border-radius: 4px;
+    padding: 1.5rem;
+    margin: 0 auto;
+  }
+
+}
 
 
 
