finished setting new colors

--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #fff;
+  background-color: rgb(91, 196, 238);
   font-size: 16px;
   min-width: 300px;
   overflow-x: hidden;
@@ -21,7 +21,9 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(91, 196, 238);
+  color:rgb(31, 155, 68);
+  border-color:black;
 }
 
 .wrapper {
@@ -33,9 +35,16 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color: rgb(34, 30, 73);
+  color:white;
   text-align: left;
   border: 2px solid;
+  border-color: black;
+}
+
+.footer a {
+  color:rgb(91, 196, 238);
+  text-decoration: underline;
 }
 /*
 Form Styles
@@ -72,7 +81,6 @@ form input {
     /* check it out by using your developer tools to shrink your screen-size */
 
     .container {
-      background-color: rgba(204, 8, 162, 0.65);
       display: flex;
       flex-direction: column;
       align-items:space-around;
@@ -97,7 +105,6 @@ form input {
 @media only screen and (min-width: 737px){
 
   .container {
-    background-color: rgba(204, 8, 162, 0.65);
     display: flex;
     flex-direction: row;
     align-items: flex-start;
